# wanderlust

./: .gitattributes  .gitignore  DATA_FLOW_VERIFICATION.md  DEPLOY.md  E2E_TESTING_INDEX.md  E2E_TESTING_SUMMARY.txt  E2E_TEST_REPORT.md  FIELD_NOTES.md  FINAL_CHECKPOINT.md  HACKATHON_DEPLOYMENT.md  INVARIANTS_CHECKS.md  LICENSE  PROGRESS.md  README.md  SUBMISSION.md  TESTING_FINDINGS.txt  app.py  pyproject.toml  requirements.txt  run_tests.py  test.sh  test_e2e_scenarios.py  test_p12.py  test_runner.sh
data/: build_manifest.json  paris_pois.parquet  paris_walk.graphml
data/cities/: barcelona_pois.parquet  barcelona_walk.graphml  cities_manifest.json  london_pois.parquet  london_walk.graphml  newyork_pois.parquet  newyork_walk.graphml
src/discoverroute/: __init__.py  config.py  pipeline.py
src/discoverroute/data/: __init__.py  build_city.py  build_graph.py  build_pois.py  taxonomy.py
src/discoverroute/enrich/: __init__.py  google_places.py
src/discoverroute/interpret/: __init__.py  affinity.py  embed.py  keywords.py  llm_vibe.py  mapping.py  profile.py  vibe.py
src/discoverroute/narrate/: __init__.py  gazetteer.py  grounding.py  llm.py  narrate.py  trace.py
src/discoverroute/routing/: __init__.py  area.py  geocode.py  graph.py  hours.py  matrix.py  orienteering.py  pois.py  scoring.py
src/discoverroute/ui/: __init__.py  design.py  map.py  (+2 more)
tests/: test_geocode.py  test_hours.py  test_interpret.py  test_interpret_fallback.py  test_narration.py  test_orienteering.py  test_pipeline.py  test_pois.py  test_profile.py  test_robustness.py  test_routing.py
