[project]
name = "discoverroute"
version = "0.1.0"
description = "Routes that deliberately detour past places matching your taste, within a travel-time budget. Paris, OSM, small-model."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "osmnx>=2.0,<3.0",
    "networkx>=3.0",
    "folium>=0.17",
    "gradio>=6.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "shapely>=2.0",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# Brick 4/6: vibe interpretation + narration. Kept optional so the
# walking skeleton (Bricks 0-3) installs without ML weights.
ml = [
    "sentence-transformers>=3.0",
    "transformers>=4.45",
    "accelerate>=1.0",
    "huggingface-hub>=0.25",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discoverroute"]

[tool.pytest.ini_options]
testpaths = ["tests"]
